exp_2/y.output
Grammaire

    0 $accept: e1 $end

    1 e1: e1 PLUS e2
    2   | e1 MOINS e2
    3   | e2

    4 e2: e2 MULT e3
    5   | e2 DIV e3
    6   | e3

    7 e3: PO e1 PF
    8   | ENTIER


Terminaux, suivis des règles où ils apparaissent

    $end (0) 0
    error (256)
    PLUS (258) 1
    MOINS (259) 2
    MULT (260) 4
    DIV (261) 5
    PO (262) 7
    PF (263) 7
    ENTIER (264) 8


Non-terminaux, suivis des règles où ils apparaissent

    $accept (10)
        à gauche: 0
    e1 (11)
        à gauche: 1 2 3
        à droite: 0 1 2 7
    e2 (12)
        à gauche: 4 5 6
        à droite: 1 2 3 4 5
    e3 (13)
        à gauche: 7 8
        à droite: 4 5 6


État 0

    0 $accept: . e1 $end

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e1  aller à l'état 3
    e2  aller à l'état 4
    e3  aller à l'état 5


État 1

    7 e3: PO . e1 PF

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e1  aller à l'état 6
    e2  aller à l'état 4
    e3  aller à l'état 5


État 2

    8 e3: ENTIER .

    $défaut  réduction par utilisation de la règle 8 (e3)


État 3

    0 $accept: e1 . $end
    1 e1: e1 . PLUS e2
    2   | e1 . MOINS e2

    $end   décalage et aller à l'état 7
    PLUS   décalage et aller à l'état 8
    MOINS  décalage et aller à l'état 9


État 4

    3 e1: e2 .
    4 e2: e2 . MULT e3
    5   | e2 . DIV e3

    MULT  décalage et aller à l'état 10
    DIV   décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 3 (e1)


État 5

    6 e2: e3 .

    $défaut  réduction par utilisation de la règle 6 (e2)


État 6

    1 e1: e1 . PLUS e2
    2   | e1 . MOINS e2
    7 e3: PO e1 . PF

    PLUS   décalage et aller à l'état 8
    MOINS  décalage et aller à l'état 9
    PF     décalage et aller à l'état 12


État 7

    0 $accept: e1 $end .

    $défaut  accepter


État 8

    1 e1: e1 PLUS . e2

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e2  aller à l'état 13
    e3  aller à l'état 5


État 9

    2 e1: e1 MOINS . e2

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e2  aller à l'état 14
    e3  aller à l'état 5


État 10

    4 e2: e2 MULT . e3

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e3  aller à l'état 15


État 11

    5 e2: e2 DIV . e3

    PO      décalage et aller à l'état 1
    ENTIER  décalage et aller à l'état 2

    e3  aller à l'état 16


État 12

    7 e3: PO e1 PF .

    $défaut  réduction par utilisation de la règle 7 (e3)


État 13

    1 e1: e1 PLUS e2 .
    4 e2: e2 . MULT e3
    5   | e2 . DIV e3

    MULT  décalage et aller à l'état 10
    DIV   décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 1 (e1)


État 14

    2 e1: e1 MOINS e2 .
    4 e2: e2 . MULT e3
    5   | e2 . DIV e3

    MULT  décalage et aller à l'état 10
    DIV   décalage et aller à l'état 11

    $défaut  réduction par utilisation de la règle 2 (e1)


État 15

    4 e2: e2 MULT e3 .

    $défaut  réduction par utilisation de la règle 4 (e2)


État 16

    5 e2: e2 DIV e3 .

    $défaut  réduction par utilisation de la règle 5 (e2)
